# nextgenarcadia-gamelauncher-09

./: README-ELECTRON.md  README.md  app.py  build-electron.js  electron-builder.json  game_launcher.py  index.html  package-lock.json  package.json  start-electron.js  tailwind.config.ts  vite.config.ts
cpp_server/: CMakeLists.txt  README.md  httplib.h  main.cpp
electron/: main.ts  preload.ts  tsconfig.json
release/: builder-effective-config.yaml
src/: App.css  App.tsx  README-CPP-SERVER.md  index.css  main.tsx
src/components/: AddGameDialog.tsx  AuthGuard.tsx  Background.tsx  CategoryBar.tsx  GameCard.tsx  GameGrid.tsx  GameShowcase.tsx  Header.tsx  NavigationArrows.tsx  OnscreenKeyboard.tsx  OwnerDashboard.tsx  PinVerification.tsx  RFIDCountdown.tsx  Screensaver.tsx  SearchBar.tsx
src/components/game-launch/: CppServerStatus.tsx  GameLaunchHeader.tsx  (+10 more)
src/hooks/: useAuth.tsx  useCategory.ts  useGames.ts  useRFIDDetection.tsx  useSearch.ts  useSettings.ts
src/lib/: db-helpers.ts  storage-helpers.ts  update-timer-settings.ts
src/pages/: ArizonaSunshineLaunch.tsx  Auth.tsx  BeatSaberLaunch.tsx  CppLauncher.tsx  CreedLaunch.tsx  CricVrxLaunch.tsx  CricketLaunch.tsx  CrisBrigadeLaunch.tsx  CybridLaunch.tsx  ElvenAssassinLaunch.tsx  FruitNinjaLaunch.tsx  GameKeyboard.tsx  Index.tsx  Library.tsx  PlankLaunch.tsx  PropagationLaunch.tsx  RollerCoasterLaunch.tsx  SportsLaunch.tsx  SubsideLaunch.tsx  UndeadCitadelLaunch.tsx  UnknownGameLaunch.tsx
src/services/: GameService.ts
src/types/: database.ts  electron.d.ts  game.ts
supabase/: config.toml
(+4 files in other folders)
